[package]
name = "shorthusk-vesting"
version = "0.1.0"
description = "A fully-featured Solana program built with Anchor 0.31.1 that manages SPL token vesting schedules. Supports linear release with cliff periods, batch initialization, administrative actions, emergency recovery, and pause/unpause mechanisms."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shorthusk_vesting"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "idl-build"] }
solana-security-txt = "1.1.1"